--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "page loader",
   "main": "src/index.js",
   "scripts": {
-    "test": "npx jest"
+    "test": "npx jest",
+    "test:debug": "DEBUG=nock.* npx jest",
+    "lint": "eslint"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,7 @@
   "bin": {
     "page-loader": "bin/page-loader.js"
   },
+  "type": "module",
   "simple-git-hooks": {
     "pre-commit": "npx eslint ."
   },
@@ -26,6 +29,7 @@
     "axios": "^1.3.4",
     "cheerio": "^1.0.0-rc.12",
     "commander": "^10.0.0",
+    "debug": "^4.3.4",
     "page-loader": "^1.2.0"
   },
   "devDependencies": {
@@ -40,8 +44,10 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
+    "jest": "^29.4.3",
     "jest-cli": "^29.4.3",
     "nock": "^13.3.0",
+    "prettier": "^2.8.4",
     "simple-git-hooks": "^2.8.1"
   }
 }
