--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,19 +26,6 @@ jobs:
         # The Node.js version to configure
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Install
-        run: |
-          make install
-      - name: Run linter
-        run: |
-          make lint
-      - name: Test & publish code coverage
-        # Publish code coverage on Code Climate
-        # https://github.com/paambaati/codeclimate-action
-        uses: paambaati/codeclimate-action@v2.7.4
-        # Add Code Climate secret key
-        env:
-          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-        with:
-          coverageCommand: make test-coverage
-          debug: true
+      - run: npm install
+      - run: npm run start:lin
+      - run: npm run test
