--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,5 +27,5 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm install
-      - run: npm run start:lin
+      - run: npm run start:win
       - run: npm run test
