--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cheerio": "^1.0.0-rc.12",
     "commander": "^10.0.0",
     "debug": "^4.3.4",
+    "listr": "^0.14.3",
     "page-loader": "^1.2.0"
   },
   "devDependencies": {
