--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,5 +26,8 @@ jobs:
         # The Node.js version to configure
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm install
-      - run: npm run test
+      - name: npm install
+        run: npm install
+
+      - name: check test
+        run: npm run test
