--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/iibadreeva/frontend-testing-react-project-67#readme",
   "dependencies": {
     "axios": "^1.3.4",
+    "axios-debug-log": "^1.0.0",
     "cheerio": "^1.0.0-rc.12",
     "commander": "^10.0.0",
     "debug": "^4.3.4",
